--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
           </h2>
           <div class="steps">
             <div class="step" id="step-1">
+              <div>
               <div class="action-setting">
                 <label for="step-action">Step 1</label>
                 <select id="step-action">
@@ -44,8 +45,9 @@
                 <label for="action-value">––數值(px)</label>
                 <input type="number" id="step-size" placeholder="例:1920" />
               </div>
+            </div>
               <!-- 刪除步驟按鈕 -->
-              <span class="deleteBtn">刪除</span>
+              <span class="deleteBtn"><img src="./img/Trash2.svg" alt="垃圾桶"></span>
             </div>
           </div>
           <button class="add-step-btn" id="add-step">
